syntax = "proto3";

option java_package = "com.iquantex.ts.cre.data.process.message.protobuf";

option java_outer_classname = "REDataFund";

// 产品信息
message FundInfo {
    string fundCode = 1;
    string iaCode = 2;
    string parent = 3;
    string name = 4;
    string assetUnitCode = 5;
    string companyCode = 6;
    int64 startDate = 7;
    int64 valueDate = 8;
    bool isMoneyFund = 9;
    bool isPublicFund = 10;
    bool isSocialFund = 11;
    string custodianBank = 12;
    repeated FundSharesOnDate listOfShares = 13;
    // 产品存款利率
    double depositeRate = 14;
    // 是否禁投BB池  IA_BOND_POOL_CONFIG
    bool isIABBPool = 15;
    // 是否禁投BB池风险等级  IA_IIT_FC_ART_BATCH_TYPE
    // 是否低风险
    bool isIALowRisk = 16;
    // 组合风险级别
    string riskLevel = 17;
    // 前10大持有人份额占有比例（前一日）
    double top10RatioYesterday = 18;
    // 当天前10大持有人份额占有比例
    double top10RatioToday = 19;
    // 产品状态
    // 0 - 正常开放
    // 1 - 周期性封闭
    // 2 - 停止申购，仅允许赎回
    // 3 - 停止赎回，仅允许申购
    // 4 - 终止
    // 5 - 正在发行
    // 6 - 发行失败
    int32 prodStatus = 20;
    // 当前阶段的开始日期
    int64 beginDate = 21;
    // 当前阶段的结束日期
    int64 endDate = 22;
    // 中债登持有人账号
    string ibAccountNum = 23;
    // 中债登DVP收款人账号
    string ibDvpPayeeNum = 24;
    // 上清所只有人账号
    string shchAccountNum = 25;
    // 上清所DVP资金清算账号
    string shchDvpPayeeNum = 26;
    // 产品要素
    map<string, string> mFundElements = 27;
}

message FundSharesOnDate {
    int64 date = 1;
    //期初份额
    double psShares = 2;
    //当日的份额
    double totalShares = 3;
    //当日的赎回量(包括赎回和基金转出)
    double redeemShares = 4;
    //当日的申购量（包括申购、基金转入和再投资）
    double createShares = 5;
}

message FundTree {
    string fundCode = 1;

    map<string, FundTreeNode> treeNodes = 2;
}

message FundTreeNode {
    string code = 1;

    string pCode = 2;

    int32 type = 3;

    string name = 4;

    string sname = 5;

    string fundCode = 6;
}
